// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
class A {
  async;
  foo() {};
}

=====================================output=====================================
class A {
  async
  foo() {}
}

================================================================================
`;

exports[`async.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class A {
  async;
  foo() {};
}

=====================================output=====================================
class A {
  async;
  foo() {}
}

================================================================================
`;

exports[`get.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
class A {
  get;
  foo() {}
}

=====================================output=====================================
class A {
  get;
  foo() {}
}

================================================================================
`;

exports[`get.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class A {
  get;
  foo() {}
}

=====================================output=====================================
class A {
  get;
  foo() {}
}

================================================================================
`;

exports[`set.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
class A {
  set;
  foo(v) {}
}

=====================================output=====================================
class A {
  set;
  foo(v) {}
}

================================================================================
`;

exports[`set.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class A {
  set;
  foo(v) {}
}

=====================================output=====================================
class A {
  set;
  foo(v) {}
}

================================================================================
`;

exports[`static.js [flow] format 1`] = `
"Unexpected token \`;\`, expected an identifier (2:9)
  1 | class A {
> 2 |   static;
    |         ^
  3 |   foo() {};
  4 | }
  5 |"
`;

exports[`static.js [meriyah] format 1`] = `"Cannot read properties of null (reading 'type')"`;

exports[`static.js - {"semi":false} [flow] format 1`] = `
"Unexpected token \`;\`, expected an identifier (2:9)
  1 | class A {
> 2 |   static;
    |         ^
  3 |   foo() {};
  4 | }
  5 |"
`;

exports[`static.js - {"semi":false} [meriyah] format 1`] = `"Cannot read properties of null (reading 'type')"`;

exports[`static.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
class A {
  static;
  foo() {};
}

=====================================output=====================================
class A {
  static;
  foo() {}
}

================================================================================
`;

exports[`static.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class A {
  static;
  foo() {};
}

=====================================output=====================================
class A {
  static;
  foo() {}
}

================================================================================
`;

exports[`static-properties.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
class A {
  static async;
  a() {}
  static get;
  b() {}
  static set;
  c(v) {}
}

=====================================output=====================================
class A {
  static async
  a() {}
  static get;
  b() {}
  static set;
  c(v) {}
}

================================================================================
`;

exports[`static-properties.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class A {
  static async;
  a() {}
  static get;
  b() {}
  static set;
  c(v) {}
}

=====================================output=====================================
class A {
  static async;
  a() {}
  static get;
  b() {}
  static set;
  c(v) {}
}

================================================================================
`;
